z-index fix nav bar mobile

--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -7,7 +7,7 @@
   height: 80px;
   position: fixed;
   width: 100%;
-  z-index: 1;
+  z-index: 999;
 }
 
 .menu {
